<resources>
    <string name="app_name">Pothole Patrol</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="notifications_ek3_string">Notifications</string>
    <string name="time_ek1_string">9:41</string>
    <string name="placeholder_string">Sound</string>
    <string name="placeholder_ek1_string">Vibrate</string>
    <string name="alert_preferences_string">Alert Preferences</string>
    <string name="button_ek1_string">Save</string>
    <string name="google_auth_web_client_id">378423130551-5knlk4hpg305j6hvbh4pkedrilno8b15.apps.googleusercontent.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="create_account">Create Account</string>
    <string name="congratulations">Congratulations</string>
    <string name="you_have_successfully_registered_an_account">You have successfully registered an account</string>
    <string name="go_to_the_login_screen">Go to the login screen</string>
    <string name="chart">Chart</string>
    <string name="number_of_potholes_by_severity_level">Number of Potholes by Severity Level</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="distribution_of_potholes_nby_severity_level">Distribution of Potholes by Severity Level</string>
    <string name="notification">Notification</string>
    <string name="clear_all">Clear all</string>
    <string name="warning">Warning!!!</string>
    <string name="you_re_close_to_a_pothole_nplease_be_careful_pothole_n_69_was_detected_close_to_nyour_position_slow_down_nand_keep_your_eyes_open">You’ re close to a pothole! Please be careful, pothole #69 was detected close to your position! Slow down and keep your eyes open.</string>
    <string name="thank_you">Thank you!</string>
    <string name="thank_you_for_your_contribution_nwe_have_a_gift_for_you_please_naccess_this_link_to_get_a_voucher_nabcxyz_com">Thank you for your contribution. We have a gift for you, please access this link to get a voucher. abcxyz.com</string>
    <string name="back">Back</string>
    <string name="reset_password">Reset Password</string>
    <string name="enterpassword">EnterPassword</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="confirm">Confirm</string>
    <string name="back2">Back</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_the_otp_code_we_just_sent_on_your_registered_email">Enter the OTP code we just sent on your registered Email</string>
    <string name="reset_password2">Reset Password</string>
    <string name="back3">Back</string>
    <string name="forget_password">Forget Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="continue2">Continue</string>
    <string name="back4">Back</string>
    <string name="forget_password2">Forget Password</string>
    <string name="enter_your_email2">Enter your email</string>
    <string name="continue4">Continue</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot">Forgot?</string>
    <string name="remember_me">Remember me</string>
    <string name="log_in">Log In</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_now">Create now</string>
    <string name="map">Map</string>
    <string name="navigation">Navigation</string>
    <string name="_1_hour_16_minutes">1 hour 16 minutes</string>
    <string name="navigate">Navigate</string>
    <string name="pothole_details">Pothole details</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="dimension">Dimension</string>
    <string name="average">Average</string>
    <string name="depth">Depth</string>
    <string name="shallow">Shallow</string>
    <string name="shape">Shape</string>
    <string name="jagged">Jagged</string>
    <string name="severity_level">Severity level</string>
    <string name="high2">High</string>
    <string name="illustration">Illustration</string>
    <string name="add_a_pothole">Add a pothole</string>
    <string name="type_location">Type location</string>
    <string name="dimension2">Dimension</string>
    <string name="compact">Compact</string>
    <string name="average2">Average</string>
    <string name="large">Large</string>
    <string name="depth2">Depth</string>
    <string name="shallow2">Shallow</string>
    <string name="noticeable">Noticeable</string>
    <string name="deep">Deep</string>
    <string name="shape2">Shape</string>
    <string name="uniform">Uniform</string>
    <string name="uneven">Uneven</string>
    <string name="jagged2">Jagged</string>
    <string name="severity_level2">Severity level</string>
    <string name="low2">Low</string>
    <string name="medium2">Medium</string>
    <string name="high3">High</string>
    <string name="do_pothole_damaged_you">Do pothole damaged you?</string>
    <string name="confirm2">Confirm</string>
    <string name="back5">Back</string>
    <string name="create_account2">Create Account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_agree_to_the_terms_and_policies">I agree to the Terms and Policies</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account2">Already have an account?</string>
    <string name="login">Login</string>
    <string name="reset_password3">Reset Password</string>
    <string name="congratulations2">Congratulations</string>
    <string name="you_have_successfully_reset_your_password">You have successfully reset your password!</string>
    <string name="go_to_the_login_screen2">Go to the login screen</string>
    <string name="account">Account</string>
    <string name="edit_profile">Edit profile</string>
    <string name="personalization">Personalization</string>
    <string name="notifications">Notifications</string>
    <string name="privacy">Privacy</string>
    <string name="terms_amp_support"><![CDATA[Terms & Support]]></string>
    <string name="report_a_problem">Report a problem</string>
    <string name="terms_and_policies">Terms and Policies</string>
    <string name="log_out">Log out</string>
    <string name="settings">Settings</string>
    <string name="select_language">Select Language</string>
    <string name="edit_profile2">Edit profile</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="country_region">Country/Region</string>
    <string name="confirm3">Confirm</string>
    <string name="notifications2">Notifications</string>
    <string name="alert_preferences">Alert Preferences</string>
    <string name="sound">Sound</string>
    <string name="vibrate">Vibrate</string>
    <string name="save">Save</string>
    <string name="personalization2">Personalization</string>
    <string name="detection_sensitivity">Detection Sensitivity</string>
    <string name="low3">Low</string>
    <string name="medium3">Medium</string>
    <string name="high4">High</string>
    <string name="save2">Save</string>
    <string name="data_sharing_options">Data Sharing Options</string>
    <string name="save4">Save</string>
    <string name="privacy4">Privacy</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="report_a_problem2">Report a problem</string>
    <string name="describe_your_problem">Describe your problem</string>
    <string name="write_something">Write something!</string>
    <string name="terms_amp_policies2"><![CDATA[Terms & Policies]]></string>
    <string name="privacy22">By using Pothole Patrol, you agree to the following:\n\n1. Services: Users can report potholes with photos and GPS location to relevant authorities.\n\n2. User Responsibilities: Do not submit false information or illegal content.\n\n3. Personal Data: We collect personal info, location, and media solely for processing reports. Data may be shared with municipal services.\n\n4. Liability: We are not responsible for delays or unresolved reports.\n\n5. Updates: Terms may change, and continued use implies acceptance.</string>
    <string name="get_started">Get Started</string>
    <string name="dashboard2">Dashboard</string>
    <string name="map2">Map</string>
    <string name="setting">Setting</string>
    <string name="congratulations3">Congratulations!</string>
    <string name="you_have_arrived_safely">You have arrived safely!</string>
    <string name="ok">OK</string>
    <string name="be_careful">Be careful</string>
    <string name="warning_pothole_detected_nearby">Warning: Pothole detected nearby!</string>
    <string name="stop">Stop</string>
    <string name="route_to_this_location">Route to this location?</string>
    <string name="location_name">Location Name</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="login2">Login</string>
    <string name="successful2">Successful</string>
    <string name="routing">Routing</string>
    <string name="from">From</string>
    <string name="your_current_location">Your current location</string>
    <string name="to">To</string>
    <string name="type_location2">Type location</string>
    <string name="search">Search</string>
    <string name="list_of_potholes">List of potholes</string>
    <string name="pothole_information">Pothole Information</string>
    <string name="location2">Location</string>
    <string name="your_address">Your address</string>
    <string name="gps_coordinates">GPS coordinates</string>
    <string name="description2">Description</string>
    <string name="dimension3">Dimension</string>
    <string name="compact2">Compact</string>
    <string name="average3">Average</string>
    <string name="large2">Large</string>
    <string name="depth3">Depth</string>
    <string name="shallow3">Shallow</string>
    <string name="noticeable2">Noticeable</string>
    <string name="deep2">Deep</string>
    <string name="shape3">Shape</string>
    <string name="uniform2">Uniform</string>
    <string name="uneven2">Uneven</string>
    <string name="jagged3">Jagged</string>
    <string name="severity_level3">Severity level</string>
    <string name="low4">Low</string>
    <string name="medium4">Medium</string>
    <string name="high5">High</string>
    <string name="do_potholes_damage_you_n">"Do potholes damage you? "</string>
    <string name="illustration2">Illustration</string>
    <string name="upload_image">Upload image</string>
    <string name="confirm4">Confirm</string>
    <string name="location3">Location</string>
    <string name="your_address2">Your address</string>
    <string name="details">Details</string>
    <string name="dimension4">Dimension</string>
    <string name="compact3">Compact</string>
    <string name="average4">Average</string>
    <string name="large3">Large</string>
    <string name="depth4">Depth</string>
    <string name="shallow4">Shallow</string>
    <string name="noticeable3">Noticeable</string>
    <string name="deep3">Deep</string>
    <string name="shape4">Shape</string>
    <string name="uniform4">Uniform</string>
    <string name="uneven4">Uneven</string>
    <string name="jagged4">Jagged</string>
    <string name="severity_level4">Severity level</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="log_out2">Log Out</string>
    <string name="cancel3">Cancel</string>
    <string name="warning_pothole_detected_nearby2">Warning: Pothole detected nearby!</string>
    <string name="continue24">Continue</string>
    <string name="stop8">Stop</string>
</resources>