<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#F5F5F5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/details_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F5F5F5"
                android:paddingTop="13dp"
                android:paddingBottom="216dp"
                android:paddingLeft="32dp"
                android:orientation="vertical">



                <LinearLayout
                    android:id="@+id/detail_title_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="36dp"
                    android:layout_marginEnd="115dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ic_back"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_marginEnd="61dp"
                        android:src="@drawable/right_arrow"
                        android:scaleType="fitXY" />

                    <TextView
                        android:id="@+id/title_details"
                        android:layout_width="179dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/pothole_details"
                        android:textColor="#000000"
                        android:textSize="28sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/title_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="9dp"
                    android:text="@string/location"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/title_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="University of Information Technology"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/title_address_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="19dp"
                    android:text="Khu phố 6, Phường Linh Trung, Thành phố Thủ Đức"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/title_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/description"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/title_dimension"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/dimension"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/title_dimension_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/average"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/title_depth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="9dp"
                    android:text="@string/depth"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/title_depth_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="11dp"
                    android:text="@string/shallow"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/title_shape"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="9dp"
                    android:text="@string/shape"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/title_shape_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="11dp"
                    android:text="@string/jagged"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/title_severity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="9dp"
                    android:text="@string/severity_level"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/title_severity_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="13dp"
                    android:text="@string/high2"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/title_illustration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:text="@string/illustration"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/image_pothole"
                    android:layout_width="285dp"
                    android:layout_height="211dp"
                    android:src="@drawable/image_pothole"
                    android:scaleType="fitXY"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
