<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:elevation="10dp"
    android:background="@drawable/dialog_frame"
    android:gravity="center_horizontal">

    <!-- Tiêu đề -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/route_to_this_location"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:gravity="center"
        android:layout_marginBottom="16dp" />

    <!-- Tên địa điểm -->
    <TextView
        android:id="@+id/tvLocationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_name"
        android:textSize="16sp"
        android:textColor="#555555"
        android:gravity="center"
        android:layout_marginBottom="24dp" />

    <!-- Nút xác nhận -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnYes"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:backgroundTint="#AFC7B1"
            android:text="@string/yes"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/btnNo"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:backgroundTint="#B22222"
            android:text="@string/no"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:textAllCaps="false" />
    </LinearLayout>

</LinearLayout>
