<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:elevation="10dp"
    android:background="@drawable/dialog_frame"
    android:gravity="center_horizontal">

    <!-- Tiêu đề -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congratulations3"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="20sp"/>

    <!-- Tên địa điểm -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_have_arrived_safely"
        android:textSize="15sp"
        android:textColor="@android:color/black"/>

    <!-- Nút xác nhận -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_ok_arrived"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:backgroundTint="#AFC7B1"
            android:text="@string/ok"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:layout_marginEnd="8dp" />
    </LinearLayout>

</LinearLayout>
