<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="#FFFFFF">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back3"
        android:padding="8dp"
        android:rotation="270"
        android:scaleType="centerInside"
        android:src="@drawable/ic_arrow_back" />

    <ImageView
        android:id="@+id/ivIllustration"
        android:layout_width="249dp"
        android:layout_height="311dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/motorcycle_illustration" />


    <TextView
        android:id="@+id/tvForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivIllustration"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/forget_password"
        android:textColor="#8EA98D"
        android:textSize="26sp" />



    <!-- Email Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvForgetPassword"
        android:layout_marginTop="25dp"
        app:hintEnabled="true"
        app:boxBackgroundColor="@android:color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>



    <!-- Sign Up Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilEmail"
        android:layout_marginTop="25dp"
        android:backgroundTint="#AFC7B1"
        android:text="@string/continue2"
        android:textAllCaps="false"
        app:cornerRadius="8dp" />


</RelativeLayout>
