<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="#FFFFFF">



    <ImageView
        android:id="@+id/ivIllustration"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/motorcycle_illustration" />



    <TextView
        android:id="@+id/tvResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivIllustration"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/reset_password3"
        android:textColor="#8EA98D"
        android:textSize="26sp" />

    <ImageView
        android:id="@+id/icTick"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@+id/tvResetPassword"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@mipmap/ic_tickk"
        android:layout_marginTop="15dp"/>


    <TextView
        android:id="@+id/tvCongratulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/icTick"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/congratulations2"
        android:textColor="#000000"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/tvYouHave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvCongratulations"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/you_have_successfully_reset_your_password"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="15sp" />





    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGotoLoginScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvYouHave"
        android:layout_marginTop="45dp"
        android:backgroundTint="#AFC7B1"
        android:text="@string/go_to_the_login_screen2"
        android:textAllCaps="false"
        app:cornerRadius="8dp" />



</RelativeLayout>
